# eg-tauri

./: angular.json  package-lock.json  package.json
src/: specta-bindings.ts  specta-bindings2.ts
src-tauri/: Cargo.toml  build.rs  model.lp  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/extensions/: mod.rs  tauri_specta_extensions.rs
src-tauri/src/load_model_details/: commands.rs  mod.rs  model_file_dto.rs  my_kon_participation_export_csv_row.rs
src-tauri/src/models/: application_dto.rs  availability_dto.rs  booking_dto.rs  company_dto.rs  mod.rs  model_dto.rs  representative_dto.rs  slot_dto.rs  student_dto.rs  talk_dto.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/company-list/: availabiltiy-from.model.ts  company-list.component.html  company-list.component.ts
src/app/company-schedule/: company-schedule.component.html  company-schedule.component.spec.ts  company-schedule.component.ts
src/app/load-model-details/: load-model-details.component.html  load-model-details.component.spec.ts  load-model-details.component.ts  load-model-form.model.ts  load-model.service.spec.ts  load-model.service.ts
src/app/model-details/: model-base-data.form-model.ts  model-details.component.html  model-details.component.spec.ts  model-details.component.ts
src/app/model-export/: model-export.component.html  model-export.component.spec.ts  model-export.component.ts
src/app/optimization/: optimization.component.spec.ts  optimization.component.ts
src/app/shared/: tauri-specta-rxjs-interop.ts
src/app/sidenav-wrapper/: sidenav-wrapper.component.html  sidenav-wrapper.component.scss  sidenav-wrapper.component.spec.ts  sidenav-wrapper.component.ts
src/app/student-list/: student-list.component.ts
src/app/student-schedule/: student-schedule.component.spec.ts  student-schedule.component.ts
src/specta-bindings/: specta-bindings.ts  specta-bindings2.ts
src/styles/: _buttons.scss  _grid.scss  flex.scss  material-theme.scss  styles.scss
src/styles/variables/: _distance.scss  media.scss
(+39 files in other folders)
