[package]
name = "eg-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eg_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-helper = "0.1.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grb = { version = "3.0.1", features = ['gurobi12'] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
tauri-helper = "0.1.4"
uuid = { version = "1.16.0", features = ["v4"] }
